<resources>
    <string name="app_name">Desafio Mobills</string>
    <string name="continue_login_Text">Faça login para continuar</string>
    <string name="error_login">Ocorreu um problema ao fazer login</string>
    <string name="title_incomes">Receitas</string>
    <string name="title_expenses">Despesas</string>
    <string name="title_home">Início</string>
    <string name="item_default_description">sei lá bicho, só sei que foi caro</string>
    <string name="item_default_value">R$ 50,00</string>
    <string name="item_default_date">20/10/2020</string>
    <string name="item_default_pending">Pendente</string>
    <string name="item_paid">Pago</string>
    <string name="item_received">Recebido</string>
    <string name="text_valor">Valor</string>
    <string name="text_desc">Descrição</string>
    <string name="new_expense">Nova despesa</string>
    <string name="new_income">Nova receita</string>
    <string name="edit_expense">Editar despesa</string>
    <string name="edit_income">Editar receita</string>
    <string name="text_date">Selecionar data</string>
    <string name="text_welcome">Seja bem vindo</string>
    <string name="msg_morning">Olá |, tenha um bom dia</string>
    <string name="msg_afternoon">Olá |, tenha uma boa tarde</string>
    <string name="msg_night">Olá |, tenha uma boa noite</string>
    <string name="qty_expenses">Você possui | despesas</string>
    <string name="qty_incomes">Você possui | receitas</string>
    <string name="txt_balance">Seu balanço atual é de |</string>
    <string name="card_paid">| pago</string>
    <string name="card_pending">| pendente</string>
    <string name="card_received">| recebido</string>
</resources>