<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HomeFragment">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_welcome"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_morning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:theme="@style/Theme.MaterialComponents"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/income_card"
        app:layout_constraintTop_toBottomOf="@id/home_subtitle"
        tools:visibility="visible">

        <TextView
            android:id="@+id/card_resume_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/txt_balance"
            android:textAlignment="center" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/expense_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:theme="@style/Theme.MaterialComponents"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/income_card"
        app:layout_constraintTop_toBottomOf="@id/card_resume"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <TextView
                android:id="@+id/income_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qty_expenses"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/income_card_pending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/card_paid"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/income_card_not_pending"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/income_card_title" />

            <TextView
                android:id="@+id/income_card_not_pending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_pending"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/income_card_pending"
                app:layout_constraintTop_toTopOf="@id/income_card_pending" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/income_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:theme="@style/Theme.MaterialComponents"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_card"
        app:layout_constraintTop_toTopOf="@id/card_resume"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <TextView
                android:id="@+id/expense_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qty_incomes"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expense_card_pending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/card_received"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/expense_card_not_pending"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/expense_card_title" />

            <TextView
                android:id="@+id/expense_card_not_pending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_pending"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/expense_card_pending"
                app:layout_constraintTop_toTopOf="@id/expense_card_pending" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>